--- a/src/main/resources/templates/certificate.jrxml
+++ b/src/main/resources/templates/certificate.jrxml
@@ -46,15 +46,15 @@
             </textField>
 <!--        Дата выдачи -->
             <textField>
-                <reportElement x="200" y="330" width="200" height="20"/>
+                <reportElement x="320" y="468" width="200" height="20"/>
                 <textElement textAlignment="Left">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA["Дата: " + $P{ISSUE_DATE}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$P{ISSUE_DATE}]]></textFieldExpression>
             </textField>
 <!--        Номер сертификата-->
             <textField>
-                <reportElement x="360" y="465" width="250" height="20"/>
+                <reportElement x="357" y="468" width="250" height="20"/>
                 <textElement textAlignment="Center">
                     <font size="12"/>
                 </textElement>
